<resources>
    <string name="app_name">becomefit</string>
    <string name="textview">TextView</string>
    <string name="becomefit_app">Becomefit app</string>
    <string name="todo">TODO</string>
    <string name="setting">Setting</string>
    <string name="home">Home</string>
    <string name="custome">Custome</string>
    <string name="scrollbar">scrollbar</string>
    <string name="fullbody">fullbody</string>
    <string name="abs">abs</string>
    <string name="legs">legs</string>
    <string name="arms">arms</string>
    <string name="full">full</string>
    <string name="start_exercise">Start exercise</string>
    <string name="fullbaby">fullbaby</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="loginpage">Loginpage</string>
    <string name="name">Name</string>
    <string name="password">password</string>
    <string name="upload_your_file">Upload your file</string>
    <string name="submit">Submit</string>
    <string name="type">type</string>
    <string name="upload">upload</string>
    <string name="descripation">descripation</string>
    <string name="saved">Saved</string>
    <string name="upload_photo_plus_all_content">upload photo plus all content</string>
    <string name="Fullbody">Fullbody</string>
    <string name="fullbody_exercise">Fullbody exercise</string>
    <string name="login">Login</string>
    <string name="calculate_bmi">Calculate Bmi</string>
    <string name="calculate_fat">Calculate fat %</string>
    <string name="rate_us">Rate us</string>
    <string name="feedback">feedback</string>
    <string name="tips">Tips</string>
    <string name="calender">Calender</string>
    <string name="_1mr">1mr</string>
    <string name="this_method_is_called_body_adiposity_index_and_allows_for_estimating_the_body_fat_using_hip_circumference_and_height">This method is called body adiposity index and allows for estimating the body fat using hip circumference and height</string>
    <string name="weight">Weight</string>
    <string name="enter_value_in_kg_cm">Enter value in kg , cm</string>
    <string name="weights">weight</string>
    <string name="height">Height</string>
    <string name="enter_value_in_kg_m">enter_value_in_kg_m</string>
    <string name="result">result</string>
    <string name="the_body_mass_index_is_and_index_of_a_person_weight_in_realtion_to_height_although_no_distinction_is_made_between_fatty_and_non_fatty_component_of_total_body_mass">The body mass index is and index of a person weight in realtion to height although no distinction is made between fatty and non-fatty component of total body mass</string>
    <string name="age">Age</string>
    <string name="enter_value_in_kg">enter_value_in_kg</string>
    <string name="how_much_can_you_lift">How much can you lift</string>
    <string name="the_1mr_or_maximum_repetition_is_the_maximun_weight_someone_can_lift_only_once_in_a_given_exercise">The 1MR or maximum repetition is the maximun weight someone can lift only once in a given exercise</string>
    <string name="mywebsite">mywebsite</string>
    <string name="abs_exercise">Abs exercise</string>
    <string name="legs_exercise">Legs exercise</string>
    <string name="arm_exercise">arm exercise</string>
    <string name="abb">abb</string>
    <string name="_8_80_pm">8:80 PM</string>
    <string name="select_time">Select Time</string>
    <string name="select_alarm">Select Alarm</string>
    <string name="cancel_alarm">Cancel Alarm</string>
    <string name="notification">Notification</string>
    <string name="no_alarm_set">No Alarm set</string>
    <string name="open_time_picker">open time picker</string>
    <string name="fill_the_answer_of_the_question_ask_below">Fill the answer of the question ask below</string>
    <string name="what_exercise_do_u_like_more">What exercise do u like more</string>
    <string name="choose_your_gender">Choose your gender</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="what_is_you_age">What is you age</string>
    <string name="select_categories_of_exercise_you_want_to_target">Select categories of exercise you want to target</string>
    <string name="button">Button</string>
    <string name="leg">leg</string>
    <string name="arm">arm</string>
</resources>