<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mr">
    <LinearLayout
        android:layout_width="369dp"
        android:layout_height="689dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="20dp"
        android:background="#EDE9E9"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:text="@string/the_1mr_or_maximum_repetition_is_the_maximun_weight_someone_can_lift_only_once_in_a_given_exercise"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="5dp"
            android:background="@color/black" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
            android:text="@string/enter_value_in_kg"
            android:textSize="24sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
            android:text="@string/how_much_can_you_lift"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/weight"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editTextTextPersonName8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/weights"
                android:inputType="textPersonName"
                android:textColorHint="#607D8B"
                android:textSize="24sp" />
        </LinearLayout>



        <Button
            android:id="@+id/submitvalue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:text="@string/submit" />

        <TextView
            android:id="@+id/result1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:textSize="24sp" />



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>