<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Setting">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="418dp"
        android:layout_height="77dp"
        android:background="#DCD1D1"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button7"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#BC9393"
            android:backgroundTint="#BF7373"
            android:gravity="bottom|center_horizontal"
            android:shadowColor="#BD7F7F"
            android:text="@string/home"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#02000B" />

        <Button
            android:id="@+id/button6"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#DDBEBE"
            android:gravity="bottom|center_horizontal"
            android:shadowColor="#AE6060"
            android:text="@string/custome"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#100F12" />

        <Button
            android:id="@+id/button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="#DDBEBE"
            android:gravity="bottom|center_horizontal"
            android:shadowColor="#AE6060"
            android:text="@string/setting"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#0D0D0E" />
    </LinearLayout>

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="652dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#8CB18C"
                android:gravity="center"
                android:padding="30dp"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />
            <View
                android:layout_width="wrap_content"
                android:layout_height="3dp"
                android:background="@color/black"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#8CB18C"
                android:gravity="center"
                android:padding="30dp"
                android:text="@string/calculate_fat"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />
            <View
                android:layout_width="wrap_content"
                android:layout_height="3dp"
                android:background="@color/black"/>
            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#8CB18C"
                android:divider="@drawable/divider"
                android:gravity="center"
                android:padding="30dp"
                android:text="@string/calculate_bmi"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />
            <View
                android:layout_width="wrap_content"
                android:layout_height="3dp"
                android:background="@color/black"/>
            <TextView
                android:id="@+id/text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#8CB18C"
                android:gravity="center"
                android:padding="30dp"
                android:text="@string/_1mr"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />
            <View
                android:layout_width="wrap_content"
                android:layout_height="3dp"
                android:background="@color/black"/>
            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#8CB18C"
                android:gravity="center"
                android:padding="30dp"
                android:text="@string/rate_us"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />
            <View
                android:layout_width="wrap_content"
                android:layout_height="3dp"
                android:background="@color/black"/>

            <TextView
                android:id="@id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#8CB18C"
                android:divider="@drawable/divider"
                android:gravity="center"
                android:padding="30dp"
                android:text="@string/mywebsite"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />
            <View
                android:layout_width="wrap_content"
                android:layout_height="3dp"
                android:background="@color/black"/>

            <TextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#8CB18C"
                android:divider="@drawable/divider"
                android:gravity="center"
                android:padding="30dp"
                android:text="@string/tips"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />
            <View
                android:layout_width="wrap_content"
                android:layout_height="3dp"
                android:background="@color/black"/>
            <TextView
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#8CB18C"
                android:divider="@drawable/divider"
                android:gravity="center"
                android:padding="30dp"
                android:text="@string/notification"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>